multivpc/terraform/vpc-2/2-igw.tf
resource "aws_internet_gateway" "central-igw" {
  vpc_id = aws_vpc.central.id

  tags = {
    Name = "igw-$(var.vpc_name)"
  }
}
